// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseUtterance on the mocked LLM path > accepts valid output first time, stripping stray fences 1`] = `
{
  "diagnostics": [],
  "flagged": false,
  "llmCalls": 1,
  "sg": {
    "entities": [
      {
        "id": "e_sandwich",
        "kind": "object",
        "lemma": "sandwich",
        "span": [
          2,
          10,
        ],
        "summary": "A sandwich layers fillings between pieces of bread.",
        "surface": "sandwich",
      },
      {
        "attributes": {
          "placement": "top",
        },
        "id": "e_bread_top",
        "kind": "substance",
        "lemma": "bread",
        "span": [
          23,
          28,
        ],
        "summary": "Bread can form the top layer of a sandwich.",
        "surface": "bread",
      },
      {
        "id": "e_tomato",
        "kind": "substance",
        "lemma": "tomato",
        "span": [
          30,
          36,
        ],
        "summary": "Tomato adds a juicy vegetable layer to the sandwich.",
        "surface": "tomato",
      },
      {
        "id": "e_ham",
        "kind": "substance",
        "lemma": "ham",
        "span": [
          38,
          41,
        ],
        "summary": "Ham is a cured meat that can be a sandwich filling.",
        "surface": "ham",
      },
      {
        "attributes": {
          "placement": "bottom",
        },
        "id": "e_bread_bottom",
        "kind": "substance",
        "lemma": "bread",
        "span": [
          23,
          28,
        ],
        "summary": "Bread can form the bottom layer of a sandwich.",
        "surface": "bread",
      },
    ],
    "language": "en",
    "relations": [
      {
        "id": "r_bread_top",
        "modality": "possible",
        "order": 1,
        "source": "e_sandwich",
        "target": "e_bread_top",
        "type": "contains",
      },
      {
        "id": "r_ham",
        "modality": "possible",
        "order": 2,
        "source": "e_sandwich",
        "target": "e_ham",
        "type": "contains",
      },
      {
        "id": "r_tomato",
        "modality": "possible",
        "order": 3,
        "source": "e_sandwich",
        "target": "e_tomato",
        "type": "contains",
      },
      {
        "id": "r_bread_bottom",
        "modality": "possible",
        "order": 4,
        "source": "e_sandwich",
        "target": "e_bread_bottom",
        "type": "contains",
      },
    ],
    "schemaVersion": "sg/1",
    "utterance": "A sandwich can contain bread, tomato, ham.",
  },
  "source": "llm",
}
`;

exports[`parseUtterance on the mocked LLM path > fallback branch: two invalid replies fall back to the rule parser and flag the result 1`] = `
{
  "diagnostics": [
    "attempt 1: Output is not valid JSON: Unexpected token 'I', "I think th"... is not valid JSON",
    "attempt 2: schemaVersion: Invalid literal value, expected "sg/1"",
    "attempt 2: utterance: Required",
    "attempt 2: language: Required",
    "attempt 2: entities: Required",
    "attempt 2: relations: Required",
  ],
  "fallbackReason": "invalid_llm_output",
  "flagged": true,
  "llmCalls": 2,
  "sg": {
    "entities": [
      {
        "id": "e_sun",
        "kind": "celestial_body",
        "lemma": "sun",
        "span": [
          4,
          7,
        ],
        "summary": "The Sun is the star at the centre of our solar system.",
        "surface": "sun",
      },
      {
        "id": "e_east",
        "kind": "direction",
        "lemma": "east",
        "span": [
          21,
          25,
        ],
        "summary": "East is the direction where the Sun appears to rise.",
        "surface": "east",
      },
      {
        "id": "e_rise",
        "kind": "action",
        "lemma": "rise",
        "span": [
          8,
          13,
        ],
        "summary": "To rise is to move upward.",
        "surface": "rises",
      },
    ],
    "language": "en",
    "notes": [
      {
        "kind": "misconception",
        "targetId": "e_rise",
        "text": "The Sun only appears to rise because Earth rotates from west to east.",
      },
    ],
    "relations": [
      {
        "evidenceSpan": [
          0,
          13,
        ],
        "id": "r_sun_moves_rise",
        "modality": "certain",
        "source": "e_sun",
        "target": "e_rise",
        "type": "moves",
      },
      {
        "evidenceSpan": [
          8,
          25,
        ],
        "id": "r_rise_direction_east",
        "modality": "certain",
        "source": "e_rise",
        "target": "e_east",
        "type": "direction",
      },
    ],
    "schemaVersion": "sg/1",
    "utterance": "The sun rises in the east.",
  },
  "source": "rule_fallback",
}
`;

exports[`parseUtterance on the mocked LLM path > repair branch: sends one repair prompt with the Zod errors, then succeeds 1`] = `
{
  "diagnostics": [
    "attempt 1: relations.0.modality: Invalid enum value. Expected 'certain' | 'possible' | 'typical' | 'negated', received 'definitely'",
  ],
  "flagged": false,
  "llmCalls": 2,
  "sg": {
    "entities": [
      {
        "id": "e_sun",
        "kind": "celestial_body",
        "lemma": "sun",
        "span": [
          4,
          7,
        ],
        "summary": "The Sun is the star at the centre of our solar system.",
        "surface": "sun",
      },
      {
        "id": "e_rises",
        "kind": "action",
        "lemma": "rise",
        "span": [
          8,
          13,
        ],
        "summary": "Rising is the Sun's apparent upward movement above the horizon.",
        "surface": "rises",
      },
      {
        "id": "e_east",
        "kind": "direction",
        "lemma": "east",
        "span": [
          21,
          25,
        ],
        "summary": "East is the direction where the Sun appears to rise.",
        "surface": "east",
      },
    ],
    "language": "en",
    "notes": [
      {
        "kind": "misconception",
        "targetId": "e_rises",
        "text": "The Sun only appears to rise because Earth rotates from west to east.",
      },
    ],
    "relations": [
      {
        "evidenceSpan": [
          4,
          13,
        ],
        "id": "r_sun_moves",
        "modality": "certain",
        "source": "e_sun",
        "target": "e_rises",
        "type": "moves",
      },
      {
        "evidenceSpan": [
          8,
          25,
        ],
        "id": "r_rise_east",
        "modality": "certain",
        "source": "e_rises",
        "target": "e_east",
        "type": "direction",
      },
    ],
    "schemaVersion": "sg/1",
    "utterance": "The sun rises in the east.",
  },
  "source": "llm_repaired",
}
`;

exports[`parseUtterance on the mocked LLM path > repair branch: sends one repair prompt with the Zod errors, then succeeds 2`] = `
"Your previous reply could not be used because it failed validation.

<utterance>The sun rises in the east.</utterance>

<previous_output>
{"schemaVersion":"sg/1","utterance":"The sun rises in the east.","language":"en","entities":[{"id":"e_sun","surface":"sun","lemma":"sun","kind":"celestial_body","span":[4,7],"summary":"The Sun is the star at the centre of our solar system."},{"id":"e_rises","surface":"rises","lemma":"rise","kind":"action","span":[8,13],"summary":"Rising is the Sun's apparent upward movement above the horizon."},{"id":"e_east","surface":"east","lemma":"east","kind":"direction","span":[21,25],"summary":"East is the direction where the Sun appears to rise."}],"relations":[{"id":"r_sun_moves","type":"moves","source":"e_sun","target":"e_rises","modality":"definitely","evidenceSpan":[4,13]},{"id":"r_rise_east","type":"direction","source":"e_rises","target":"e_east","modality":"certain","evidenceSpan":[8,25]}],"notes":[{"targetId":"e_rises","kind":"misconception","text":"The Sun only appears to rise because Earth rotates from west to east."}]}
</previous_output>

<validation_errors>
- relations.0.modality: Invalid enum value. Expected 'certain' | 'possible' | 'typical' | 'negated', received 'definitely'
</validation_errors>

Return a corrected Semantic Graph for the same utterance that fixes every error listed above and
follows every rule in the system prompt. Respond with the JSON object only: no prose, no Markdown,
no code fences."
`;
